# yet-another-statusline

./: .gitignore  AUDIT-2.md  AUDIT.md  CLAUDE.md  CONTEXT.md  HANDOFF.md  Makefile  NOTICE  README.md  handoff_reminder.txt  prototypes.txt  pyproject.toml  yas.example.toml
.claude/: README.md  delegate-routing.json  settings.json
.claude-plugin/: marketplace.json  permissions-allow.json  plugin.json
.claude/agents/: pr-screenshotter.md  spec-author.md  spec-implementer.md  verifier.md  yas-editor.md
.claude/hooks/: nudge-delegate-tests.py
.claude/skills/tmck-code-statusline/: SKILL.md
.claude/skills/yas-demo-text/: SKILL.md
.claude/skills/yas-pr/: SKILL.md
.claude/skills/yas-pr-screenshots/: SKILL.md
.github/: pull_request_template.md
.github/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml
claude/: mon.py  statusline-command.py  statusline-info-1777417798.json  statusline-token-viewer.py  statusline_command.py
claude/mon/: discovery.py  layout.py  lifecycle.py  tui.py
claude/statusline/: accounting.py  app.py  borders.py  clock.py  config.py  constants.py  demo.py  git.py  gradient.py  info.py  layout.py  metrics.py  models.py  openspec.py  pill.py  renderer.py  session.py  skills.py  subagents.py  tasks.py  tasks_view.py  text.py  textutil.py  themes.py  tokens.py  transcript.py
claude/yas/: app.py  config.py  constants.py  context_state.py  layout.py  renderer.py  session.py  themes.py  tokens.py
claude/yas/info/: __init__.py  clear.py  git.py  openspec.py  skills.py  subagents.py  tasks.py  toolcounts.py  transcript.py  workflows.py
claude/yas/render/: borders.py  gradient.py  metrics.py  pill.py  tasks_view.py  text.py
demo-widths/: kitchen-sink.1.txt  kitchen-sink.100.txt  kitchen-sink.11.txt  kitchen-sink.14.txt  kitchen-sink.17.txt  kitchen-sink.21.txt  kitchen-sink.23.txt  kitchen-sink.28.txt  kitchen-sink.29.txt  kitchen-sink.32.txt  kitchen-sink.35.txt  kitchen-sink.39.txt  kitchen-sink.4.txt  kitchen-sink.41.txt  kitchen-sink.42.txt  kitchen-sink.43.txt  kitchen-sink.44.txt  kitchen-sink.45.txt  kitchen-sink.46.txt  kitchen-sink.47.txt  kitchen-sink.48.txt  kitchen-sink.49.txt  kitchen-sink.50.txt  kitchen-sink.51.txt  kitchen-sink.52.txt  kitchen-sink.53.txt  kitchen-sink.54.txt  kitchen-sink.55.txt  kitchen-sink.56.txt  kitchen-sink.57.txt  kitchen-sink.58.txt  kitchen-sink.59.txt  kitchen-sink.60.txt  kitchen-sink.61.txt  kitchen-sink.62.txt  kitchen-sink.63.txt  kitchen-sink.64.txt  kitchen-sink.65.txt  kitchen-sink.66.txt  kitchen-sink.67.txt  (+33 more)
hooks/: hooks.json  yas-prompt-hook.py
openspec/changes/add-burndown-trend/: design.md  proposal.md  tasks.md
openspec/changes/add-clear-timer/: tasks.md
openspec/changes/add-install-script/: design.md  tasks.md
openspec/changes/context-source-breakdown/: design.md  tasks.md  (+1 more)
ops/: PROTOTYPE_LAYOUTS_NOTES.md  alacritty.py  ansi_png.py  bench.py  bench_json_import.py  demo.py  install.sh  profile_statusline.py  prototype_layouts.py  session-info-example.json
ops/install-docker-test/: container-test.sh  run.sh
ops/profile-out/: FINDINGS.md  full.pstats  full.txt  importtime-315-after.txt  importtime-315-before.txt  importtime-315-final.txt  importtime.txt  render.pstats  render.txt  report.html
skills/config/: SKILL.md
skills/init/: SKILL.md
skills/uninstall/: SKILL.md
test/: conftest.py  helper.py  test_ascii_render.py  test_bar_builders.py  test_borders.py  test_burndown.py  test_claude_quota.py  test_codex_rate_limits.py  test_cohort_visibility.py  test_config.py  test_context_fill.py  test_context_gauge_softlimit.py  test_context_line.py  test_context_state.py  test_elapsed_duration.py  test_fit_path_ladder.py  test_from_dict_parsers.py  test_git_info.py  test_glyphs.py  test_gradient_math.py  test_helper.py  test_info.py  test_install_script.py  test_justify.py  test_labels.py  test_labels_layout.py  test_layout_seam.py  test_layout_subagent_rows.py  test_layout_tasks.py  test_loaded_skills.py  test_model_cost_rates.py  test_model_section.py  test_mon_discovery.py  test_mon_integration.py  test_mon_layout.py  test_mon_lifecycle.py  test_mon_tui.py  test_openspec.py  test_openspec_bar.py  test_path_git.py  (+32 more)
test/fixtures/: claude_dark_medium.ansi  claude_dark_narrow.ansi  claude_dark_wide.ansi
(+189 files in other folders)
