[project]
name = "yet-another-statusline"
version = "0.2.3"
description = "Claude Code statusline showing info at a glance: tokens, context, model, subagents, burn rate, skills, plugins, OpenSpec specs, task lists, and more"
readme = "README.md"

requires-python = ">=3.10"

dependencies = []

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
    "uv",
]

[tool.pytest.ini_options]
pythonpath = ["claude"]

[tool.mypy]
exclude = [
    ".claude/",
    ".venv/",
    "openspec/",
    "test/",
]
plugins = []
disallow_untyped_defs = true  # no functions without type annotations
warn_return_any = true        # warn about functions that return Any
ignore_missing_imports = true # ignore imports that can't be resolved (e.g., third-party libraries without type stubs)
strict = true                 # enable all strict type-checking options
warn_unused_configs = true
disallow_subclassing_any = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".claude/",
    ".git",
    ".ruff_cache",
    ".venv",
    "openspec/",
]

line-length = 140
indent-width = 4
target-version = "py310"


[tool.ruff.lint]
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E4", # E subset of the pycodestyle (`E`)  codes by default.
    "E7",
    "E9",
    "F",  # Enable Pyflakes (`F`)
]
ignore = [
    "E401", # multiple imports on one line
    "E701", # multiple statements on one line
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
# prevents whitespace from being removed
unfixable = [
    "E203", # whitespace before ':'
    "E401", # multiple imports on one line
    "E701", # multiple statements on one line
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "preserve" # keep existing quote style (single or double)
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
preview = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"
multiline-quotes = "single"

